# umrt-project-perry-config

./: .gitignore  README.md
umrt-project-perry-description/: .gitignore  CMakeLists.txt  package.in.xml
umrt-project-perry-description/assets/: base.part  base.stl  base_link.part  base_link.stl  base_platter.part  boss_extrude1.part  boss_extrude1.stl  flat_pattern_of_humerus_link.part  flat_pattern_of_humerus_link.stl  flat_pattern_of_plate_1.part  flat_pattern_of_plate_2.part  flat_pattern_of_plate_2.stl  gripper_interface.part  gripper_interface.stl  humerus_link.part  humerus_link.stl  inner_main_link.stl  outer_main_link.stl  part_1.part  part_1.stl  part_11.part  part_13.part  part_13.stl  part_17.part  part_18.part  part_2.part  part_2.stl  part_28.part  part_28.stl  part_2__2.part  part_2__2.stl  part_2__3.part  part_2__3.stl  part_2__4.part  part_2__4.stl  part_3.part  part_3.stl  part_30.part  part_30.stl  part_31.part  (+35 more)
umrt-project-perry-description/assets/merged/: part_2_visual.stl  (+6 more)
umrt-project-perry-description/launch/: view_robot.launch.py
umrt-project-perry-description/ros2_control/: diffbot.ros2_control.xacro
umrt-project-perry-description/rviz/: project_perry.rviz  project_perry_view.rviz
umrt-project-perry-description/urdf/: diffbot.urdf.xacro  project_perry.materials.xacro  project_perry.urdf.xacro  project_perry_description.urdf.xacro  robot.urdf
umrt-project-perry-moveit-config/: .setup_assistant  CMakeLists.txt  package.in.xml  pp.srdf.old
umrt-project-perry-moveit-config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  project_perry.ros2_control.xacro  project_perry.srdf  project_perry.urdf.xacro  ros2_controllers.yaml
umrt-project-perry-moveit-config/launch/: arm.launch.py  base_station.launch.py  demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
(+58 files in other folders)
